--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -4,5 +4,6 @@
     <div class = "container">
         <h1>This is the Home page</h1>
         <p>This is some text</p>  
+        <img src="/static/images/house.jpeg" height="1330" width="2364">
     </div>
 {{end}}
