--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -15,6 +15,40 @@
     {{end}}
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <!-- <nav class="navbar navbar-expand-lg navbar bg-dark"> -->
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/about">About</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Rooms
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="/rooms/generals-quarters">General's Quarters</a></li>
+                      <li><a class="dropdown-item" href="/rooms/majors-suit">Major's Suit</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/make-reservation">Book Now</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/contacts">Contacts</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     {{block "content" .}}
 
     {{end}}
@@ -22,6 +56,15 @@
     {{block "js" .}}
     
     {{end}}
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" 
+            crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
+            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" 
+            crossorigin="anonymous">
+    </script>
 </body>
 </html>
 
