--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -1,8 +1,81 @@
 {{template "base" .}}
-
 {{define "content"}}
-    <div class = "container">
-        <h1>This is the Home page</h1>
-        <p>This is some text</p>  
+<style>
+    .my-footer{
+        height: 5em;
+        background-color: rgb(12, 161, 131);
+        margin-top: 1em;
+        padding: 1em;
+        color: white;
+        font-size: 80%;
+    }
+</style>
+
+  <div id="main-carouse" class="carousel slide carousel-fade">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#main-carouse" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#main-carouse" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#main-carouse" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/static/images/woman-laptop.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/static/images/tray.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/static/images/outside.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#main-carouse" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#main-carouse" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+    <div class = "container">
+
+        <h1 class="text-center mt-4">Welcome to Fort Smythe Bed and Breakfast</h1>
+        <p>Your home away from home Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis hic quae eos consequatur delectus error provident non eveniet ipsa molestias atque est, inventore incidunt doloremque assumenda! Et ullam unde totam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime recusandae blanditiis exercitationem, corporis aspernatur alias possimus molestias voluptas expedita, quibusdam laborum modi mollitia facere facilis nobis dolore nam deleniti. Iure!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora ex doloribus soluta vitae nesciunt numquam, nobis libero, consequatur praesentium voluptates hic enim doloremque, animi repellendus! Omnis vitae explicabo aperiam dignissimos!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum non nam nostrum eligendi repellendus. Dolor natus quibusdam dolores veritatis qui, atque cumque? Excepturi molestiae soluta, quos sed ipsam architecto deleniti?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, dolores facilis! Temporibus adipisci architecto nulla repellat ullam, excepturi porro debitis blanditiis dolorum laboriosam repellendus quasi non perspiciatis aperiam, est dolore.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo distinctio deserunt ipsam nam impedit, ipsum commodi aliquam, reiciendis temporibus vel eos facere totam sunt blanditiis. Ipsum impedit itaque optio repellat?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto delectus ipsa dolorum saepe, eum tenetur excepturi, cupiditate minima perferendis ullam esse laborum optio eveniet nesciunt aut sunt enim alias recusandae.
+        </p>  
+    
+    <div class="row">
+        <div class="col text-center">
+            <a href = "/make-reservation" class="btn btn-success">Make Reservation Now</a>
+        </div>
+    </div>
+</div>
+    <div class="row my-footer">
+        <div class="col">
+            LEFT
+        </div>
+        <div class="col">
+            MIDDLE
+        </div>
+        <div class="col">
+            RIGHT
+        </div>
+    
 {{end}}
